# robot_workspaces

./: .gitignore  README.md  inventory.csv  kurulum_rehberi.txt  mapper_params_online_async.yaml  slam_config.yaml  slam_params.yaml
combined_ws/src/combined_robot/: NEW_CHAT_SUMMARY.txt  README_MAPPING_NAV2.md  package.xml  setup.cfg  setup.py
combined_ws/src/combined_robot/combined_robot/: arm_cartesian_gui.py  fr3_observation_pose_recorder.py  gazebo_tomato_detector.py  greenhouse_nearest_pick_place.py  greenhouse_planning_scene.py  initial_pose_publisher.py  mission_manager.py  pick_place_detachable.py  tomato_collision_scene_manager.py  tomato_depth_detector.py  tomato_depth_mapper.py  tomato_map_panel.py  tomato_map_pick_target.py  yolo_bbox_viewer.py  yolo_tomato_detector.py
combined_ws/src/combined_robot/config/: combined_controllers.yaml  components_no_lidar.yaml  ekf_sim_config.yaml  fr3_controllers.yaml  fr3_observation_poses.yaml  kinematics_override.yaml  pilz_cartesian_limits.yaml  sera_initial_pose_b10_spawn.yaml  sera_initial_pose_plant10.yaml  sera_initial_pose_upper_manual.yaml  sera_nav2_params.yaml  sera_nav2_params_b10_spawn.yaml  sera_waypoints.yaml
combined_ws/src/combined_robot/graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
combined_ws/src/combined_robot/launch/: combined.launch.py  combined_gazebo.launch (Copy).py  combined_gazebo.launch.py  combined_gazebo_sera.launch.py  combined_joint_gui.launch.py  combined_rviz_only.launch.py  greenhouse_nearest_pick_place.launch.py  mapping_gazebo.launch.py  pick_place_detachable.launch.py  sera_manual_arm_setup.launch.py  sera_mapping.launch.py  sera_mission.launch.py  sera_moveit_rviz.launch.py  sera_nav2.launch.py  sera_spawn_harvest_demo.launch.py  sera_survey.launch.py  test_lidar.launch.py
combined_ws/src/combined_robot/maps/: keepout_mask.before_right_padding.pgm  keepout_mask.pgm  keepout_mask.yaml  my_map.before_right_padding.pgm  my_map.pgm  my_map.raw_slam_artifacts.pgm  my_map.yaml
combined_ws/src/combined_robot/models/: pickup_pedestal.sdf  tomato_farm_sera_saved_current.sdf  tomato_placeholder.sdf
combined_ws/src/combined_robot/rviz/: sera_mapping.rviz  sera_moveit.rviz
combined_ws/src/combined_robot/scripts/: arm_cartesian_gui.py  arm_joint_gui.py  optimize_tomato_glbs.py  start_sera_mission.sh  start_sera_survey.sh
combined_ws/src/combined_robot/urdf/: panther_camera.xacro  panther_lidar.xacro  panther_with_franka.srdf.xacro  panther_with_franka.urdf.xacro
combined_ws/src/combined_robot/worlds/: greenhouse_world.sdf  pick_place_detachable_test.sdf  plant_module_empty_test.sdf  single_plant_tomato_test.sdf  single_real_tomato_test.sdf  single_tomato_easy.sdf  tomato_farm_px4_complete.sdf  tomato_farm_sera.before_5tomatoes_3pickable.sdf  tomato_farm_sera.before_friend_integration.sdf  tomato_farm_sera.lite_models.sdf  tomato_farm_sera.sdf  tomato_farm_sera_3rows_optimized_backup.sdf  tomato_farm_sera_6rows_full.sdf  tomato_farm_sera_no_tomatoes.sdf
combined_ws/src/combined_robot_gz_plugins/: CMakeLists.txt  package.xml
combined_ws/src/combined_robot_gz_plugins/src/: contact_attach_system.cpp
franka_ros2_ws/src/franka_ros2/franka_bringup/: CMakeLists.txt  package.xml
franka_ros2_ws/src/franka_ros2/franka_gazebo_bringup/: CMakeLists.txt  README.md  package.xml
franka_ros2_ws/src/franka_ros2/franka_mobile_sensors/: CMakeLists.txt  package.xml
franka_ros2_ws/src/franka_ros2/franka_selfcollision/: CHANGELOG.rst  CMakeLists.txt  package.xml
franka_ros2_ws/src/franka_ros2/integration_launch_testing/: CMakeLists.txt  README.md  package.xml
husarion_ws/src/husarion_components_description/: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  NOTICE.md  README.md  package.xml
husarion_ws/src/husarion_components_description/config/: gz_intel_realsense_d435_remappings.yaml  gz_kinova_remappings.yaml  gz_luxonis_depthai_remappings.yaml  gz_orbbec_astra_remappings.yaml  gz_ouster_os_remappings.yaml  gz_slamtec_rplidar_remappings.yaml  gz_stereolabs_zed_remappings.yaml  gz_teltonika_remappings.yaml  gz_velodyne_remappings.yaml  kinova_6dof_controllers.yaml  kinova_7dof_controllers.yaml  robotiq_controllers.yaml  ur_controllers.yaml
husarion_ws/src/husarion_components_description/env-hooks/: husarion_components_description.sh.in
husarion_ws/src/husarion_components_description/launch/: gz_components.launch.py  gz_intel_realsense_d435.launch.py  gz_kinova_6dof.launch.py  gz_kinova_7dof.launch.py  gz_luxonis_depthai.launch.py  gz_orbbec_astra.launch.py  gz_ouster_os.launch.py  gz_robotiq.launch.py  gz_slamtec_rplidar.launch.py  gz_stereolabs_zed.launch.py  gz_teltonika.launch.py  gz_ur.launch.py  gz_velodyne.launch.py  gz_wibotic_station.launch.py
husarion_ws/src/husarion_components_description/meshes/: ouster_os01.dae  v_slot_profile.dae  wibotic_frame.dae  wibotic_receiver.dae  wibotic_transmitter.dae
husarion_ws/src/husarion_components_description/test/: component.urdf.xacro  test_components_xacro.py
husarion_ws/src/husarion_components_description/urdf/: components.urdf.xacro  dev.urdf.xacro  gz_sensor.urdf.xacro  intel_realsense_d435.urdf.xacro  kinova.urdf.xacro  luxonis_depthai.urdf.xacro  orbbec_astra.urdf.xacro  ouster.urdf.xacro  rack.urdf.xacro  robotiq.urdf.xacro  slamtec_rplidar.urdf.xacro  stereolabs_zed.urdf.xacro  teltonika_003R-00253.urdf.xacro  ur.urdf.xacro  velodyne_puck.urdf.xacro  wibotic_receiver.urdf.xacro  wibotic_station.urdf.xacro
husarion_ws/src/husarion_ugv_autonomy_ros/husarion_ugv_autonomy/: CMakeLists.txt  README.md  autonomy_deps.repos  package.xml
husarion_ws/src/husarion_ugv_autonomy_ros/husarion_ugv_docking/: CMakeLists.txt  README.md  package.xml  plugin.xml
husarion_ws/src/husarion_ugv_autonomy_ros/husarion_ugv_navigation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
husarion_ws/src/husarion_ugv_ros/husarion_ugv_battery/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
husarion_ws/src/husarion_ugv_ros/husarion_ugv_description/: CHANGELOG.rst  CMakeLists.txt  CONFIGURATION.md  (+2 more)
(+956 files in other folders)
